@@ -96,6 +96,7 @@ WHAT IS NEW?
     * "delete map state" takes customid arg, like other mapstate commands [Ralph]
     * "get/set rect fuzzy zoom", "get/set rect stationary pattern" [Ralph]
     * "keypress time" [Ralph]
+    * "random choice" [Ralph]
 
   *** Changes
     * Removed support for optional prefixes on .ini config settings (e.g.
